--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
 	"description": "shopping list for practice with MERN",
 	"main": "server.js",
 	"scripts": {
+		"client-install": "npm install --prefix client",
 		"start": "server.js",
-		"server": "nodemon server.js"
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "Patrick Bridwell",
 	"license": "MIT",
